--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,11 @@ p {
 div.form {
     display: flex;
     justify-content: center;
+    background-color: rgba(224,216,222, 0.5);
+    padding: 30px 40px;
+    border-radius: 5px;
+    margin: 20px 40px;
+    width: 92%
 }
 
 div.input {
