--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ h1 {
     background-color: rgba(224,216,222, 0.5);
     padding: 30px 40px;
     border-radius: 5px;
-    margin: 20px 40px;
+    width: 90%;
 }
 
 h2 {
@@ -43,24 +43,54 @@ div.form {
     background-color: rgba(224,216,222, 0.5);
     padding: 30px 40px;
     border-radius: 5px;
-    margin: 20px 40px;
-    width: 92%
+    margin-top: 20px;
+    width: 90%;
+
 }
 
-div.input {
-    display : flex;
+.input {
+    display: flex;
+    justify-content: space-around;
+}
+
+.inputBox {
+    width: 150px;
+    border-radius: 5px;
+    margin: 10px;
+}
+
+.button {
+    display: flex;
     justify-content: center;
 }
 
-
-.button {
-    margin-left: 20%;
-}
-
 .forest {
-    margin-right: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+    margin: 10px;
+    font-size: 1.25rem;
 }
 
 .lynx {
-    margin-left: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+    margin: 10px;
+    font-size: 1.25rem;
+}
+
+#button {
+    background-color: #355f4d;
+    border-radius: 10px;
+    border: #E0D8DE 2px solid;
+    color: #E0D8DE;
+    padding: 10px;
+    transition: 0.3s;
+}
+
+#button:hover {
+    background-color: #593837;
 }
