event listener added to all grid-item divs. script tag linking to index.js added to index.html. placeholder styling added for .hit and .miss

--- a/styles.css
+++ b/styles.css
@@ -84,3 +84,11 @@ p {
 #button:hover {
     background-color: #593837;
 }
+
+.hit {
+    background-color: green;
+}
+
+.miss {
+    background-color: red;
+}
