placeholder styling for .hit and .miss re-added to styles.css

--- a/styles.css
+++ b/styles.css
@@ -111,3 +111,11 @@ div[data-hit ~= "1"] {
 div[data-hit ~= "0"] {
     background-image: url("project-assets/ren-ran-bBiuSdck8tU-unsplash.jpg");
 }
+
+.hit{
+    background-color: green;
+}
+
+.miss {
+    background-color: red;
+}
