--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ div[data-hit ~= "2"]{
     color: #355f4d;
     padding: 10px;
     transition: 0.3s;
-    margin-top: 50px;
+    margin-top: 30px;
     width: 50%;
     position: relative;
     bottom: 0;
@@ -193,7 +193,12 @@ div[data-hit ~= "2"]{
         height: 30%;
     }
     .endModalContent button {
-        margin-top: 25px;
+        margin-top: 0;
     }
 }
 
+@media screen and (max-width: 410px) {
+    .scoreMessage {
+        font-size: 24px;
+    }
+}
