--- a/styles.css
+++ b/styles.css
@@ -175,13 +175,14 @@ div[data-hit ~= "2"]{
 }
 
 #livesCounterBar {
+    display: none;
+    justify-content: space-evenly;
+    align-items: center;
     background-color: rgba(89, 56, 55, 0.72);
-    width: 100vw;
     height: 100px;
     position: sticky;
-    top: 20px;
-    left: calc(-50vw + 50%);
-    right: 0;
+    top: 0;
+    z-index: 1;
 }
 
 .livesDisplay {
