new media query and general styling for small screen

--- a/styles.css
+++ b/styles.css
@@ -146,7 +146,6 @@ div[data-hit ~= "2"]{
             38.4px 37.2px 33.4px rgba(0, 0, 0, 0.101),
             92px 89px 80px rgba(0, 0, 0, 0.14)
 ;
-
 }
 
 .endModalContent button {
@@ -176,6 +175,13 @@ div[data-hit ~= "2"]{
     text-align: center;
 }
 
+@media screen and (max-width: 900px) {
+    #lynxInput {
+        flex-direction: column;
+        justify-content: space-between;
+    }
+}
+
 @media screen and (max-width: 640px) {
     .inputContainer {
         flex-flow: column;
@@ -201,6 +207,9 @@ div[data-hit ~= "2"]{
 }
 
 @media screen and (max-width: 410px) {
+    .inputContainer{
+        text-align: center;
+    }
     .scoreMessage {
         font-size: 20px;
     }
