--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ h1 {
     color: #355f4d;
     font-size: 5rem;
     margin: 60px 40px;
+    text-align: center;
 }
 
 .instructions {
@@ -209,7 +210,7 @@ div[data-hit ~= "2"]{
         justify-content: space-evenly;
     }
     h1 {
-        font-size: 3rem;
+        font-size: 2.5rem;
     }
     .endModalContent {
         height: 30%;
